# tree-sitter-solidity

./: Cargo.toml  grammar.js
src/: grammar.json  node-types.json  parser.c
test/corpus/: expressions.txt
